--- a/assessments/Assignment_01.ipynb
+++ b/assessments/Assignment_01.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "source": [
     "## The Data\n",
-    "You will use a dataset called `eeg_data.csv`. This is a preprocessed dataset. The original dataset from the reference consists of 5 different folders, each with 100 files, with each file representing a single subject/person. Each file is a recording of brain activity for around 23 seconds. Each data point is the value of the EEG recording at a different point in time. There are in total 500 patients with each has 4097 datapoints.\n",
+    "You will use a dataset called `eeg_data.csv`. This is a preprocessed dataset. The original dataset from the reference consists of 5 different folders, each with 100 files, with each file representing a single subject/person. Each file is a recording of brain activity for around 23 seconds. Each data point is the value of the EEG recording at a different point in time. There are in total 500 patients with each has **4094** datapoints.\n",
     "\n",
     "The originial data was shuffled into 23 chunks per patient, each chunk contains 178 data points. \n",
     "The first column is an identifier with the chunk number (X1 ..X23) and the Patient number (for example V1.791)\n",
