fixed broken links

--- a/assessments/Assignment_02.ipynb
+++ b/assessments/Assignment_02.ipynb
@@ -22,12 +22,13 @@
     "- Use widgets to make the plot interactive \n",
     "- Use GIS libraries to plot geographical data\n",
     "\n",
-    "Tutorials about combining data: https://github.com/fenna/BFVM23PROG2/blob/main/tutorials/tutorial_combine_data.ipynb\n",
+    "Tutorials about combining data: https://github.com/fenna/BFVM23PROGDP/blob/main/tutorials/tutorial_combine_data.ipynb\n",
     "\n",
-    "study case combining data:https://github.com/fenna/BFVM23PROG2/blob/main/study_cases/adults_who_binge_drank_in_hot_towns.ipynb\n",
+    "study case combining data:https://github.com/fenna/BFVM23PROGDP/blob/main/study_cases/adults_who_binge_drank_in_hot_towns.ipynb\n",
     "\n",
     "\n",
-    "Please add the topics you want to learn about here: <padlet>\n",
+    "Please add the topics you want to learn about here: https://padlet.com/ffeenstra1/questions-and-things-you-want-to-learn-for-the-second-use-ca-79r4ogo8958qp5c6\n",
+    "\n",
     "\n",
     "\n",
     "Your job is to **visualize the lab values taken for COVID-19 patients of survived versus not survived patients**. \n",
@@ -96,7 +97,7 @@
     "## Part 1: Load the data (20 pt)\n",
     "\n",
     "Instructions: Load the data of the following files. \n",
-    "Preferably we read the data not with a hard coded data path but using a config file. See https://fennaf.gitbook.io/bfvm23prog2/data-processing/configuration-files/yaml\n",
+    "Preferably we read the data not with a hard coded data path but using a config file. See https://fennaf.gitbook.io/bfvm22prog1/data-processing/configuration-files/yaml\n",
     "\n",
     "- conditions.csv\n",
     "- patients.csv\n",
