--- a/assessments/Assignment_03.ipynb
+++ b/assessments/Assignment_03.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assignment 04b: Sleeping habits\n",
+    "## Assignment 03: Sleeping habits\n",
     "\n",
-    "As a data scientist you will work with ordinal or categorical data as well. What are good methods to visualize such data? What are proper statistics to use? What needs to be done in the data preparation steps to conduct certain analysis. During this week we will work with data from a sleeping study. This dataset is not mandatory. You are encouraged to use data from your project when possible. \n",
+    "As a data scientist you will work with ordinal or categorical data as well. What are good methods to visualize such data? What are proper statistics to use? What needs to be done in the data preparation steps to conduct certain analysis. During this week we will work with data from a sleeping study. This dataset is not mandatory. You are encouraged to use data from your project when possible. It is also able to use an interesting source from the internet, as long as no notebooks are copied withouth reference. \n",
     "\n",
     "Keywords: statistics, categorical data, ordinal data, survey-based study of the sleeping, exploratory data analysis, normalization, hypothesis testing, p-value\n",
     "\n",
     "\n",
     "More to read:\n",
-    "- https://fennaf.gitbook.io/bfvm23prog/\n",
+    "- https://fennaf.gitbook.io/bfvm22prog1/\n",
     "\n",
     "https://machinelearningmastery.com/statistical-hypothesis-tests-in-python-cheat-sheet/\n",
     "There are a number of cheatsheets and tutorials on the internet. The next overview is a compact overview of tutorials\n",
