added challenge in 03 assignment

--- a/assessments/Assignment_03.ipynb
+++ b/assessments/Assignment_03.ipynb
@@ -100,6 +100,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Deliver organised solution\n",
+    "\n",
+    "Challenge yourself. Can you create a dashboard for the final analysis and deliver the code in  python files instead of notebooks?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a name='0'></a>\n",
     "## Part 1: Load the data (10 pt)\n",
     "\n",
